testsuite/tests/typecheck/should_fail/CommonFieldTypeMismatch.hs
module CommonFieldTypeMismatch where

data A =
  A1 { fld :: Int }
  |
  A2 { fld :: String }
