testsuite/tests/typecheck/should_fail/CommonFieldTypeMismatch.stderr
CommonFieldTypeMismatch.hs:3:1: error: [GHC-91827]
    • Constructors A1 and A2 give different types for field ‘fld’
    • In the data type declaration for ‘A’

CommonFieldTypeMismatch.hs:4:8: error: [GHC-83865]
    • Couldn't match type ‘[Char]’ with ‘Int’
      Expected: Int
        Actual: String
    • In the expression: fld
      In an equation for ‘fld’: fld A2 {fld = fld} = fld

